# serializer version: 1
# name: test_all_entities[da_wm_wm_000001][number.washer_rinse_cycles-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'max': 5,
      'min': 0,
      'mode': <NumberMode.BOX: 'box'>,
      'step': 1.0,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'number.washer_rinse_cycles',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Rinse cycles',
    'platform': 'smartthings',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'washer_rinse_cycles',
    'unique_id': 'f984b91d-f250-9d42-3436-33f09a422a47_main_custom.washerRinseCycles_washerRinseCycles_washerRinseCycles',
    'unit_of_measurement': 'cycles',
  })
# ---
# name: test_all_entities[da_wm_wm_000001][number.washer_rinse_cycles-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Washer Rinse cycles',
      'max': 5,
      'min': 0,
      'mode': <NumberMode.BOX: 'box'>,
      'step': 1.0,
      'unit_of_measurement': 'cycles',
    }),
    'context': <ANY>,
    'entity_id': 'number.washer_rinse_cycles',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '2',
  })
# ---
# name: test_all_entities[da_wm_wm_000001_1][number.washing_machine_rinse_cycles-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'max': 5,
      'min': 0,
      'mode': <NumberMode.BOX: 'box'>,
      'step': 1.0,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'number.washing_machine_rinse_cycles',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Rinse cycles',
    'platform': 'smartthings',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'washer_rinse_cycles',
    'unique_id': '63803fae-cbed-f356-a063-2cf148ae3ca7_main_custom.washerRinseCycles_washerRinseCycles_washerRinseCycles',
    'unit_of_measurement': 'cycles',
  })
# ---
# name: test_all_entities[da_wm_wm_000001_1][number.washing_machine_rinse_cycles-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Washing Machine Rinse cycles',
      'max': 5,
      'min': 0,
      'mode': <NumberMode.BOX: 'box'>,
      'step': 1.0,
      'unit_of_measurement': 'cycles',
    }),
    'context': <ANY>,
    'entity_id': 'number.washing_machine_rinse_cycles',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '2',
  })
# ---
# name: test_all_entities[da_wm_wm_01011][number.machine_a_laver_rinse_cycles-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'max': 5,
      'min': 0,
      'mode': <NumberMode.BOX: 'box'>,
      'step': 1.0,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'number.machine_a_laver_rinse_cycles',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Rinse cycles',
    'platform': 'smartthings',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'washer_rinse_cycles',
    'unique_id': 'b854ca5f-dc54-140d-6349-758b4d973c41_main_custom.washerRinseCycles_washerRinseCycles_washerRinseCycles',
    'unit_of_measurement': 'cycles',
  })
# ---
# name: test_all_entities[da_wm_wm_01011][number.machine_a_laver_rinse_cycles-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Machine à Laver Rinse cycles',
      'max': 5,
      'min': 0,
      'mode': <NumberMode.BOX: 'box'>,
      'step': 1.0,
      'unit_of_measurement': 'cycles',
    }),
    'context': <ANY>,
    'entity_id': 'number.machine_a_laver_rinse_cycles',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '2',
  })
# ---
